[package]
name = "invinservicedemon"
version = "0.1.0"
edition = "2021"
description = "This Rust code checks the installation status of osquery, Wazuh, and ClamAV services and generates JSON data representing their status. It's useful for applications needing to display service status information."
license = "MIT"
authors = ["Anubhav Gain <iamanubhavgain@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syslog = "6.1.0"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
zbus = "4.1.2"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[package.metadata.rpm]
maintainer = "Anubhav Gain <iamanubhavgain@gmail.com>"
homepage = "https://github.com/mranv/invinservicedemon"
target = ["x86_64-unknown-linux-gnu"]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
invinservicedemon = { path = "/usr/bin/invinservicedemon" }
invinservicedemon_service = { path = "/lib/systemd/system/invinservicedemon.service" }

[package.metadata.rpm.files]
invinservicedemon_service = { path = "/lib/systemd/system/invinservicedemon.service" }  # Corrected the path
invinservicedemon = { path = "target/release/invinservicedemon" }

[package.metadata.generate-rpm]
name = "invinservicedemon"  # Example: specify the package name
version = "0.1.0"  # Example: specify the package version
license = "MIT"  # Example: specify the package license
summary = "A Rust service checker"  # Example: specify the package summary
url = "https://github.com/mranv/invinservicedemon"  # Example: specify the package homepage URL

[[package.metadata.generate-rpm.assets]]
source = "target/release/invinservicedemon"  # Example: specify the location of the binary file
dest = "/usr/bin/invinservicedemon"  # Example: specify the install destination
mode = "755"  # Example: specify the permissions


[package.metadata.deb]
name = "invinservicedemon"
extended-description = """\
This Rust code checks the installation status of osquery, Wazuh, and ClamAV services and generates JSON data representing their status. It's useful for applications needing to display service status information."""
priority = "optional"
section = "net"
depends = "libc6 (>= 2.31), libssl3"
conf-files = ["/etc/invinservicedemon/config.yaml", "/etc/invinservicedemon/host.key", "/etc/invinservicedemon/.daemonaddr"]
maintainer-scripts="assets/debian"
assets = [
    ["assets/invinservicedemon.service", "/lib/systemd/system/invinservicedemon.service", "644"],
    ["assets/empty.config.yaml", "/etc/invinservicedemon/config.yaml", "644"],
    ["assets/empty.key", "/etc/invinservicedemon/host.key", "600"],
    ["target/release/invinservicedemon", "/usr/bin/invinservicedemon", "755"]
]
